--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "react-loading-indicator",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A loading indicator written purely in React that uses SVG and no images",
   "main": "build/LoadingIndicator.js",
+  "files": [
+    "build"
+  ],
   "scripts": {
     "prepublish": "babel -d build src"
   },
