--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
   },
   "homepage": "https://github.com/exponentjs/react-loading-indicator#readme",
   "dependencies": {
-    "radium": "^0.15.1",
-    "react": "^0.14.0"
+    "radium": "^0.16.2",
+    "react": "^0.14.6"
   },
   "devDependencies": {
-    "babel": "^5.8.29"
+    "babel-cli": "^6.4.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-1": "^6.3.13"
   }
 }
