--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-loading-indicator",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A loading indicator written purely in React that uses SVG and no images",
   "main": "build/LoadingIndicator.js",
   "files": [
@@ -25,13 +25,15 @@
   },
   "homepage": "https://github.com/exponentjs/react-loading-indicator#readme",
   "dependencies": {
-    "radium": "^0.16.2",
-    "react": "^0.14.6"
+    "radium": "^0.17.1"
   },
   "devDependencies": {
     "babel-cli": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-1": "^6.3.13"
+  },
+  "peerDependencies": {
+    "react": "*"
   }
 }
