--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   },
   "homepage": "https://github.com/exponentjs/react-loading-indicator#readme",
   "dependencies": {
-    "radium": "^0.17.1"
+    "aphrodite": "^0.5.0",
+    "classnames": "^2.2.5"
   },
   "devDependencies": {
-    "babel-cli": "^6.4.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "babel-cli": "^6.11.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.3.13"
   },
   "peerDependencies": {
